Update 'afxiswgmq-nodejs' component image to: quay.io/rhtap_qe/rhtap-qe-nodejs:237664284a9b327f9fe66246ed396fa89f687226@sha256:c9eeb98c1031caa5c029151f1a682dbef2ee2e5b2e69f5f19df9729cd3eb22c9

--- a/components/afxiswgmq-nodejs/overlays/development/deployment-patch.yaml
+++ b/components/afxiswgmq-nodejs/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: afxiswgmq-nodejs
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/rhtap-qe-nodejs:237664284a9b327f9fe66246ed396fa89f687226@sha256:c9eeb98c1031caa5c029151f1a682dbef2ee2e5b2e69f5f19df9729cd3eb22c9
+          name: container-image
